added points, user btn, everything is in DB now, fixed sections ui and flow, colors for map, marking section clean, viewing ur reports, deleting reports

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"dependencies": {
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.56.0",
+		"csv-parse": "^6.1.0",
 		"daisyui": "^5.0.50"
 	}
 }
